# beautiful-sites

./: .gitignore  backend.Dockerfile  frontend.Dockerfile  pyproject.toml
.github/workflows/: build-backend.yaml  build-frontend.yaml
.helm/templates/: deployment.yaml  ingress.yaml  service.yaml
django_app/: populate.py  values.yaml
django_app/django_app/: settings.py  urls.py
django_app/gallery/: models.py  viewsets.py
django_app/gallery/migrations/: 0001_initial.py  0002_artexhibition_address_artexhibition_source.py  0003_alter_artexhibition_source.py
django_app/news/: models.py  viewsets.py
django_app/news/migrations/: 0001_initial.py  0002_article_author.py  0003_alter_article_title.py
vue-app/: index.html  package-lock.json  package.json  tailwind.config.js  values.yaml
vue-app/.docker/nginx/: default.conf
vue-app/src/: main.js
vue-app/src/components/: About.vue  Article.vue  Contacts.vue  Footer.vue  Gallery.vue  Navbar.vue  News.vue
vue-app/src/stores/: gallery.js  news.js
vue-app/src/views/: AboutView.vue  ArticleView.vue  ContactsView.vue  GalleryView.vue  HomeView.vue
